--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <script>
     $.getJSON("static/library.json", function (data) {
         $.each(data.library, function (index, value) {
-           $('#buttonContainer').append('<button class="block" id="'+value.path+'">'+value.cmd+'</button>');
+           $('#buttonContainer').append('<button onclick="testfct()" class="block" id="'+value.path+'">'+value.cmd+'</button>');
         });
     });
     </script>
@@ -54,5 +54,8 @@
         alert(file);
       });
   });
+  function testfct(){
+    alert("test");
+  }
   </script>
 </html>
